# edgeRust

./: Cargo.toml
src/: main.rs  mongodb.rs  struct.rs  struct_scheme.rs
