[package]
name = "EdgeProgram"
version = "0.1.0"
authors = ["Zain <zainulabideenbawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde_derive = "1.0.115"
serde = "1.0.115"

